# entropy-sdk

./: .gitignore  Cargo.toml  README.md
src/: entity.rs  grid.rs  lib.rs
src/ai/: logic.rs  mod.rs
src/ai/basic/: automove.rs  harvest.rs  mod.rs
src/client/: http.rs  mod.rs
src/test/: http.rs  mod.rs
